replace usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()' and ensure that the returned list is unmodified.