@@ -9,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class UserMapper
@@ -46,6 +45,6 @@ public class UserMapper
     {
         return users.stream()
                 .map(this::toUserDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
